[package]
name = "joinery"
version = "2.0.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
readme = "README.md"
license = "MIT"
edition = "2018"
description = "A small crate for generically joining iterators with a separator"
repository = "https://github.com/Lucretiel/joinery"
categories = ["no-std", "rust-patterns", "value-formatting"]

[badges]
travis-ci = { repository = "Lucretiel/joinery" }
maintenance = { status = "actively-developed" }

[dependencies]

[features]
# These features are performance-enhancing but use nightly-only rust.
nightly = []

# docs.rs stuff
[package.metadata.docs.rs]
all-features = true
# TODO: fork me on github banner
