[package]
name = "joinery"
version = "3.1.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
readme = "README.md"
license = "MIT"
edition = "2021"
description = "A small crate for generically joining iterators with a separator"
repository = "https://github.com/Lucretiel/joinery"
categories = ["no-std", "rust-patterns", "value-formatting"]

[badges]
travis-ci = { repository = "Lucretiel/joinery" }
maintenance = { status = "actively-developed" }

[dependencies]
proc-macro2 = { version = "1.0.27", optional = true, default-features = false }
quote = { version = "1.0.9", optional = true, default-features = false }

[features]
token-stream = ["quote", "proc-macro2"]

# These features are performance-enhancing but use nightly-only rust.
nightly = []

# docs.rs stuff
[package.metadata.docs.rs]
all-features = true
# TODO: fork me on github banner
